# dotaplusfordesperatepeople

./: .gitignore  CMakeLists.txt  README.md  dotaplusfordesperatepeople.7z  main.cpp  res.qrc  version.json
DB/: DatabaseManager.cpp  DatabaseManager.h
Logger/: Logger.cpp  Logger.h
MemoryManager/: MemoryManager.cpp  MemoryManager.h  memoryworker.cpp  memoryworker.h  row.h
OverlayManager/: overlaymanager.cpp  overlaymanager.h
ProcessManager/: ProcessManager.cpp  ProcessManager.h
SoundManager/: soundPaths.h  soundmanager.h
TimeNotifier/: timenotifier.cpp  timenotifier.h
Updater/: Updater.cpp  Updater.h
Utils/: Utility.cpp  Utility.h
